Fixed displaying Administration menu item; (#190)
Fixed loading data on My Projects page;
Set CodeScan as default tab in Global Settings;